--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Bagel Fat One', cursive;
   letter-spacing: 0.085rem;
-  color: rebeccapurple;
+  color: #59ba7d;
 }
 
 p, ul, ol, li {
