--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
   --black: #3a3a3a;
   --font-main: 'Bagel Fat One', cursive;
   --font-body: Arial, Helvetica, sans-serif;
-  --banana-yellow: yellow;
+  --banana-yellow: hotpink;
 }
 
 body {
